feat: add JSON runtime settings and modal overlays